[package]
name = "isosurface"
version = "0.0.4"
authors = ["Tristam MacDonald <swiftcoder@gmail.com>"]
license = "Apache-2.0"
description = "Isosurface extraction algorithms"
repository = "https://github.com/swiftcoder/isosurface"
readme = "README.md"

[dev-dependencies]
glium = "0.20.0"
glium_text_rusttype = "0.3.1"
cgmath = "0.16.1"

[profile.dev]
opt-level = 2
